--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,3 +8,32 @@ Here are all the posts:
 </ol>
 
 <%= link_to "New Post", new_post_path %>
+<BR>CREATE USER
+
+<%= form_for @user do |f| %>
+  <p>
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
+  </p>
+  <p>
+    <%= f.label :password %><br />
+    <%= f.password_field :password %>
+  </p>
+  <p><%= f.submit %></p>
+<% end %>
+
+<br>LOGIN
+
+<%= form_tag sessions_path do %>
+  <p>
+    <%= label_tag :email %><br />
+    <%= text_field_tag :email %>
+  </p>
+  <p>
+    <%= label_tag :password %><br />
+    <%= password_field_tag :password %>
+  </p>
+  <p>
+    <%= submit_tag "Login" %>
+  </p>
+<% end %>
